--- a/form.html
+++ b/form.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haley Atkinson - WDD 230 - Web Frontend Development</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <title>Haley Atkinson - WDD 230 - Web Frontend Development - Form</title>
     <meta name="description" content="WDD 230 - Web Frontend Development. Haley Atkinson. Course assignment portal.">
     <meta name="author" content="Haley Atkinson">
     <link rel="stylesheet" href="styles/normalize.css">
@@ -39,8 +39,8 @@
     </nav>
 
     <main>
-        <h1></h1>
-        <form>
+        <h1>WDD230 Sample Form</h1>
+        <form method="get" action="record.html">
             <fieldset>
                 <legend>Form</legend>
                 <label>Username* <input type="text" name="username" id="username" required></label>
@@ -49,10 +49,25 @@
                         title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters."
                         required></label>
                 <label>Password* <input type="password" name="pwd2" id="pwd2" required></label>
-                <label>Email* <input type="email" name="email" id="email" placeholder="someone@gmail.com"
-                        pattern="[a-zA-Z0-9._%+\-]+@byui\.edu" title="Please enter a valid email address."
+                <label>Email* <input type="email" name="email" id="email" placeholder="email@byui.edu"
+                        pattern="[a-zA-Z0-9._%+\-]+@byui\.edu" title="Please enter a valid email address ending in 'byui.edu'."
                         required></label>
-                <label>Page Rating <input type="range" name="rating" id="rating"></label>
+                <label>Page Rating</label>
+                <div id="rangevalue">0</div>
+                <input type="range" id="r" name="r" min="0" max="10" value="0" step="1" list="rangevalues">
+                <datalist id="rangevalues">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </datalist>
             </fieldset>
 
             <input type="submit" value="Finish">
