form css work so far

--- a/form.html
+++ b/form.html
@@ -39,7 +39,7 @@
 
     <main>
         <h1>WDD230 Sample Form</h1>
-        <form method="get" action="record.html">
+        <form method="get" action="record.html" class="wf1">
             <fieldset>
                 <legend>Form</legend>
                 <label>Username* <input type="text" name="username" id="username" required></label>
