finish all html and js for form.

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce Site</title>
+    <title>Chamber of Commerce Site: Join Form</title>
     <meta name="description" content="Billings Chamber of Commerce Website">
     <meta name="author" content="Haley Atkinson">
     <link rel="stylesheet" href="styles/normalize.css">
@@ -29,37 +29,15 @@
             <li class="active"><a href="index.html" title="Home">Home</a></li>
             <li><a href="discover.html" title="Discover">Discover</a></li>
             <li><a href="#" title="Directory">Directory</a></li>
-            <li><a href="join.html" title="Join">Join</a></li>
+            <li><a href="#" title="Join">Join</a></li>
         </ul>
     </nav>
 
     <main>
-        <div class="hero">
-            <picture>
-                <!--<source srcset="" media="(min-width: 400px)">
-                <source srcset="" media="(min-width: 960px)">-->
-                <img src="images/billings.webp" alt="Hero Image - Billings Rimrocks" width="1200" height="952">
-            </picture>
-            <div class="herolabel">
-                <span><a href="" class="cta">Click here to join the chamber of commerce!</a></span>
-            </div>
-        </div>
-        <section class="card">
-            <h2>Upcoming Events</h2>
-            <ul>
-                <li><a href="#">52nd Annual Symphony in the Park</a></li>
-                <li><a href="#">Yellowstone Valley Farmer's Market</a></li>
-                <li><a href="#">Alberta Bair Theater: Swan Lake</a></li>
-            </ul>
-        </section>
-        <section class="card">
-            <h2>Current Weather in Billings</h2>
-            <p>weather info</p>
-        </section>
-        <section class="card">
-            <h2>Shop Local! Business Spotlights</h2>
-            <p>local businesses</p>
-        </section>
+        <h1>Chamber of Commerce Join Form</h1>
+        <p>Thank you. Your form has been submitted.</p>
+        <p>You may expect a response regarding your organization's
+            eligibility in 3-5 business days.</p>
     </main>
 
     <footer>
@@ -68,6 +46,7 @@
     </footer>
 
     <script src="scripts/chamber.js"></script>
+    <script src="scripts/join.js"></script>
 </body>
 
 </html>
