--- a/form.html
+++ b/form.html
@@ -48,7 +48,7 @@
                         title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters."
                         required></label>
                 <label>Password* <input type="password" name="pwd2" id="pwd2" required></label>
-                <label>Email* <input type="email" name="email" id="email" placeholder="email@byui.edu"
+                <label>Email* <input type="email" name="email" id="email" placeholder="example@byui.edu"
                         pattern="[a-zA-Z0-9._%+\-]+@byui\.edu" title="Please enter a valid email address ending in 'byui.edu'."
                         required></label>
                 <label>Page Rating</label>
