--- a/chamber/join.html
+++ b/chamber/join.html
@@ -26,43 +26,69 @@
     <nav>
         <button id="myButton">&#9776;</button>
         <ul class="menuLinks">
-            <li class="active"><a href="index.html" title="Home">Home</a></li>
+            <li><a href="index.html" title="Home">Home</a></li>
             <li><a href="discover.html" title="Discover">Discover</a></li>
             <li><a href="#" title="Directory">Directory</a></li>
-            <li><a href="#" title="Join">Join</a></li>
+            <li class="active"><a href="join.html" title="Join">Join</a></li>
         </ul>
     </nav>
 
     <main>
-        <h1>Chamber of Commerce Join Form</h1>
-        <form method="get" action="thankyou.html" class="wf1">
-            <fieldset>
-                <legend>Chamber of Commerce Join Form</legend>
-                <label>First Name* <input type="text" name="fname" id="fname" required></label>
-                <label>Last Name* <input type="text" name="lname" id="lname" required></label>
-                <label>Title or Position <input type="text" name="position" id="position" pattern="^[A-Za-z\s\-]{7,}$" title="Only alphabetic characters, hyphens, and spaces are allowed. Minimum 7 characters."></label>
-                <label>Email* <input type="email" name="email" id="email" placeholder="example@gmail.com"
-                    title="Please enter a valid email address." required></label>
-                <label>Phone* <input type="tel" name="phone" id="phone" placeholder="(208)234-5678" required></label>
-                <label>Business/Organization Name* <input type="text" name="business" id="business" required></label>
-                <div>Membership Level</div>
-                    <label><input type="radio" name="audience" value="np"> NP Membership (non-profit)</label>
-                    <label><input type="radio" name="audience" value="bronze"> Bronze Membership</label>
-                    <label><input type="radio" name="audience" value="silver"> Silver Membership</label>
-                    <label><input type="radio" name="audience" value="gold"> Gold Membership</label>
-                <label>Business/Organization Description <input type="text" name="description" id="description"></label>
-                
-                <input type="hidden" name="timestamp" id="timestamp">
-                <div>
-                    <label for="timestampVisible">Form Loaded At:</label>
-                    <span id="timestampVisible"></span>
-                </div>
+        
+        <div class="">
+            <h2>Chamber of Commerce New Membership Form</h2>
+            <form method="get" action="thankyou.html" class="wf1">
+                <fieldset>
+                    <legend>New Membership Form</legend>
+                    <label>First Name* <input type="text" name="fname" id="fname" required></label>
+                    <label>Last Name* <input type="text" name="lname" id="lname" required></label>
+                    <label>Title or Position <input type="text" name="position" id="position" pattern="^[A-Za-z\s\-]{7,}$" title="Only alphabetic characters, hyphens, and spaces are allowed. Minimum 7 characters."></label>
+                    <label>Email* <input type="email" name="email" id="email" placeholder="example@gmail.com"
+                        title="Please enter a valid email address." required></label>
+                    <label>Phone* <input type="tel" name="phone" id="phone" placeholder="(406)234-5678" required></label>
+                    <label>Business/Organization Name* <input type="text" name="business" id="business" required></label>
+                    <div>Membership Level</div>
+                        <label><input type="radio" name="audience" value="np"> NP Membership (non-profit, no fee)</label>
+                        <label><input type="radio" name="audience" value="bronze"> Bronze Membership</label>
+                        <label><input type="radio" name="audience" value="silver"> Silver Membership</label>
+                        <label><input type="radio" name="audience" value="gold"> Gold Membership</label>
+                    <label>Business/Organization Description <input type="text" name="description" id="description"></label>
+                    <input type="hidden" name="timestamp" id="timestamp">
+                    <div>
+                        <label for="timestampVisible">Form Loaded At:</label>
+                        <span id="timestampVisible"></span>
+                    </div>
+                </fieldset>
+                <input type="submit" value="Join Now!">
+            </form>
+        </div>    
 
-            </fieldset>
+            <div class="benefits">
+                <h2>Membership Level Benefits</h2>
+                <h3>NP Membership (Non-Profit)</h3>
+                <p>Cost: No Annual Fee</p>
+                <p>Non-profit organizations may join the Chamber of Commerce at no cost to them.
+                    Thank you for the valuable contributions you make to our community.</p>
+                <h3>Bronze Membership</h3>
+                <p>Cost: $250 (Annual)</p>
+                <p>Bronze Membership allows businesses and organizations to attend our annual training
+                    and meet-and-greet. Bronze members receive our basic advertisement package and
+                    10% discounts for participation in city events.</p>
+                <h3>Silver Membership</h3>
+                <p>Cost: $350 (Annual)</p>
+                <p>Silver Membership allows businesses and organizations to attend quarterly training
+                    and meet-and-greets. Silver members receive our standard advertisement package and
+                    20% discounts for participation in city events.</p>
+                <h3>Gold Membership</h3>
+                <p>Cost: $500 (Annual)</p>
+                <p>Gold Membership allows businesses and organizations to attend monthly training
+                    and meet-and-greets. Gold members receive our premium advertisement package and
+                    35% discounts for participation in city events. Gold Membership businesses also
+                    have the ability to be nominated as a spotlight on our website homepage.</p>
+            </div>
 
-            <input type="submit" value="Join Now!">
+        </div>
 
-        </form>
     </main>
 
     <footer>
