json prophets learning activity, index homepage update

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
                 <li><a href="week04/images/css-combinators.jpg">Week 4 Learning Activity 4.2: CSS Combinators</a></li>
                 <li><a href="week04/tablebuild.html">Week 4 Learning Activity 4.3: HTML Tables</a></li>
                 <li><a href="week04/form-start/index.html">Week 4 Learning Activity 4.4: HTML Forms</a></li>
-                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/KKjzNyK">Week 5 Learning Activity 5.1: CSS Pseudo Elements</a></li>
+                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/KKjzNyK">Week 5 Learning Activity 5.1:
+                        CSS Pseudo Elements</a></li>
                 <li><a href="week05/new-ward-members.json">Week 5 Learning Activity 5.2: JSON</a></li>
-                <li><a href="">Week 5 Learning Activity 5.3: The Fetch API</a></li>
+                <li><a href="week05/prophets.html">Week 5 Learning Activity 5.3: The Fetch API</a></li>
                 <li><a href="">Week 5 Learning Activity 5.4: Weather API</a></li>
             </ul>
         </section>
