weather learn act so far

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         CSS Pseudo Elements</a></li>
                 <li><a href="week05/new-ward-members.json">Week 5 Learning Activity 5.2: JSON</a></li>
                 <li><a href="week05/prophets.html">Week 5 Learning Activity 5.3: The Fetch API</a></li>
-                <li><a href="">Week 5 Learning Activity 5.4: Weather API</a></li>
+                <li><a href="week05/weather.html">Week 5 Learning Activity 5.4: Weather API</a></li>
             </ul>
         </section>
 
