--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5.3 JSON Prophets Learning Activity</title>
+    <title>5.3 Fetch API Prophets Learning Activity</title>
     <meta name="description" content="description of page using keywords">
     <meta name="author" content="Haley Atkinson">
     <link rel="stylesheet" href="styles/prophets.css">
