--- a/week05/weather.html
+++ b/week05/weather.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,11 @@
     <meta name="author" content="Haley Atkinson">
     <link rel="stylesheet" href="styles">
 </head>
+
 <body>
-    <header><h1>OpenWeatherMap.org API Test</h1></header>
+    <header>
+        <h1>OpenWeatherMap.org API Test</h1>
+    </header>
     <main>
         <p>The current temperature in Trier, Germany is <span id="current-temp"></span></p>
         <figure>
@@ -20,4 +24,5 @@
     <footer>Haley Atkinson | OpenWeatherMap.org | CC BY-SA 4.0</footer>
     <script src="scripts/weather.js"></script>
 </body>
+
 </html>
