edit typo, meta descriptions

--- a/week05/weather.html
+++ b/week05/weather.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5.4 Weather API Learning Activity</title>
-    <meta name="description" content="description of page using keywords">
+    <meta name="description" content="5.4 Weather API Learning Activity">
     <meta name="author" content="Haley Atkinson">
     <link rel="stylesheet" href="styles">
 </head>
