index homepage weather updates

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
             <h2>Information</h2>
             <div class="weather">
                 <h3>Weather:</h3>
-                <span class="weather">weather info</span>
+                <span class="weather" class="current-temp"></span>
+                <figure>
+                    <img id="weather-icon" src="" alt="">
+                    <figcaption></figcaption>
+                </figure>
             </div>
             <div class="page-visits">
                 <h3>Number of Visits:</h3>
@@ -101,6 +105,7 @@
     </footer>
 
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/weatherHome.js"></script>
 </body>
 
 </html>
