--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2>Information</h2>
             <div class="weather">
                 <h3>Weather:</h3>
-                <span class="weather" class="current-temp"></span>
+                <span class="current-temp"></span>
                 <figure>
                     <img id="weather-icon" src="" alt="">
                     <figcaption></figcaption>
