--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
-                <li><a href="#">Week 1 Learning Activity</a></li>
+                <li><a href="week01/holygrail.html">Week 1 Learning Activity 1.3: CSS Layout Review: Holy Grail</a></li>
+                <li><a href="week01/media-query.html">Week 1 Learning Activity 1.5: CSS Media Queries</a></li>
                 <li><a href="week02/design.html">Week 2 Learning Activity 2.1: Design</a></li>
                 <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/XWwEpbB">Week 2 Learning Activity 2.5:
                         Hambutton</a></li>
