finished team activity w5

--- a/index.html
+++ b/index.html
@@ -52,28 +52,7 @@
 
         <section class="card">
             <h2>Learning Activities</h2>
-            <ul>
-                <li><a href="week01/holygrail.html">Week 1 Learning Activity 1.3: CSS Layout Review: Holy Grail</a></li>
-                <li><a href="week01/media-query.html">Week 1 Learning Activity 1.5: CSS Media Queries</a></li>
-                <li><a href="week02/design.html">Week 2 Learning Activity 2.1: Design</a></li>
-                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/XWwEpbB">Week 2 Learning Activity 2.5:
-                        Hambutton</a></li>
-                <li><a href="week02/bom.html">Week 2 Learning Activity 2.5: DOM</a></li>
-                <li><a href="week03/images/landscape2.webp.webp">Week 3 Learning Activity 3.1: WebP</a></li>
-                <li><a href="week03/lazyload.html">Week 3 Learning Activity 3.2: Lazy Load</a></li>
-                <li><a href="week03/responsive-images.html">Week 3 Learning Activity 3.3: Responsive Images</a></li>
-                <li><a href="week03/bom3.html">Week 3 Learning Activity 3.4: Web Storage API</a></li>
-                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/xxNvZev">Week 4 Learning Activity 4.1:
-                        CSS Psuedo-classes</a></li>
-                <li><a href="week04/images/css-combinators.jpg">Week 4 Learning Activity 4.2: CSS Combinators</a></li>
-                <li><a href="week04/tablebuild.html">Week 4 Learning Activity 4.3: HTML Tables</a></li>
-                <li><a href="week04/form-start/index.html">Week 4 Learning Activity 4.4: HTML Forms</a></li>
-                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/KKjzNyK">Week 5 Learning Activity 5.1:
-                        CSS Pseudo Elements</a></li>
-                <li><a href="week05/new-ward-members.json">Week 5 Learning Activity 5.2: JSON</a></li>
-                <li><a href="week05/prophets.html">Week 5 Learning Activity 5.3: The Fetch API</a></li>
-                <li><a href="week05/weather.html">Week 5 Learning Activity 5.4: Weather API</a></li>
-            </ul>
+            <ul id="learning-activities"></ul>
         </section>
 
         <section class="card">
@@ -107,6 +86,7 @@
 
     <script src="scripts/getDates.js"></script>
     <script src="scripts/weatherHome.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 
 </html>
