update descriptions, links for all chamber pages

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamber of Commerce Site</title>
-    <meta name="description" content="Billings Chamber of Commerce Website: Homepage">
+    <meta name="description" content="Billings Chamber of Commerce Website: Directory Page">
     <meta name="author" content="Haley Atkinson">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
-    <meta property="og:title" content="Billings Chamber of Commerce Website: Homepage" />
+    <meta property="og:title" content="Billings Chamber of Commerce Website: Directory Page" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="images/billings.webp" />
     <meta property="og:url" content="https://haly14.github.io/wdd230/chamber/index.html" />
@@ -26,9 +26,9 @@
     <nav>
         <button id="myButton">&#9776;</button>
         <ul class="menuLinks">
-            <li class="active"><a href="index.html" title="Home">Home</a></li>
+            <li><a href="index.html" title="Home">Home</a></li>
             <li><a href="discover.html" title="Discover">Discover</a></li>
-            <li><a href="directory.html" title="Directory">Directory</a></li>
+            <li class="active"><a href="directory.html" title="Directory">Directory</a></li>
             <li><a href="join.html" title="Join">Join</a></li>
         </ul>
     </nav>
