directory page json, js, html, css attempt 1

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -34,32 +34,13 @@
     </nav>
 
     <main>
-        <div class="hero">
-            <picture>
-                <!--<source srcset="" media="(min-width: 400px)">
-                <source srcset="" media="(min-width: 960px)">-->
-                <img src="images/billings.webp" alt="Hero Image - Billings Rimrocks" width="1200" height="952">
-            </picture>
-            <div class="herolabel">
-                <span><a href="" class="cta">Click here to join the chamber of commerce!</a></span>
-            </div>
+        <div class="menu">
+            <button id="grid">⏹️ Grid</button>
+            <button id="list">📄 List</button>
         </div>
-        <section class="card">
-            <h2>Upcoming Events</h2>
-            <ul>
-                <li><a href="#">52nd Annual Symphony in the Park</a></li>
-                <li><a href="#">Yellowstone Valley Farmer's Market</a></li>
-                <li><a href="#">Alberta Bair Theater: Swan Lake</a></li>
-            </ul>
-        </section>
-        <section class="card">
-            <h2>Current Weather in Billings</h2>
-            <p>weather info</p>
-        </section>
-        <section class="card">
-            <h2>Shop Local! Business Spotlights</h2>
-            <p>local businesses</p>
-        </section>
+        <hr>
+        <article id="directory" class="grid">
+        </article>
     </main>
 
     <footer>
