--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -49,6 +49,7 @@
     </footer>
 
     <script src="scripts/chamber.js"></script>
+    <script src="scripts/members.js"></script>
 </body>
 
 </html>
