fixed directory css issues

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,12 +33,11 @@
         </ul>
     </nav>
 
-    <main>
+    <main class="directory">
         <div class="menu">
             <button id="grid">⏹️ Grid</button>
             <button id="list">📄 List</button>
         </div>
-        <hr>
         <article id="directory" class="grid">
         </article>
     </main>
