weather to chamber homepage, with 3-day forecast

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,7 +54,19 @@
         </section>
         <section class="card">
             <h2>Current Weather in Billings</h2>
-            <p>weather info</p>
+            <div class="weather">
+                <h3>Weather:</h3>
+                <span class="current-temp"></span>
+                <figure>
+                    <img id="weather-icon" src="" alt="">
+                    <figcaption></figcaption>
+                </figure>
+            </div>
+            <div class="forecast">
+                <h3>3-Day Forecast:</h3>
+                <ul class="forecast-list">
+                </ul>
+            </div>
         </section>
         <section class="card">
             <h2>Shop Local! Business Spotlights</h2>
@@ -68,6 +80,7 @@
     </footer>
 
     <script src="scripts/chamber.js"></script>
+    <script src="scripts/weather.js"></script>
 </body>
 
 </html>
