finished weather, business spotlights

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -70,7 +70,8 @@
         </section>
         <section class="card">
             <h2>Shop Local! Business Spotlights</h2>
-            <p>local businesses</p>
+            <div id="spotlights">
+            </div>
         </section>
     </main>
 
