add banner to homepage, style in css

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,8 +41,12 @@
                 <img src="images/billings.webp" alt="Hero Image - Billings Rimrocks" width="1200" height="952">
             </picture>
             <div class="herolabel">
-                <span><a href="" class="cta">Click here to join the chamber of commerce!</a></span>
+                <span><a href="join.html" class="cta">Click here to join the chamber of commerce!</a></span>
             </div>
+        </div>
+        <div id="banner" class="banner">
+            <button id="close-banner" aria-label="Close banner">❌</button>
+            <p>Don't miss our Chamber of Commerce Meet and Greet this Wednesday at 7:00 p.m.!</p>
         </div>
         <section class="card">
             <h2>Upcoming Events</h2>
