small grammar edits to index

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
         </div>
         <div id="banner" class="banner">
             <button id="close-banner" aria-label="Close banner">❌</button>
-            <p>Don't miss our Chamber of Commerce Meet and Greet this Wednesday at 7:00 p.m.!</p>
+            <p>Don't miss our Chamber of Commerce meet and greet this Wednesday at 7:00 p.m.!</p>
         </div>
         <section class="card">
             <h2>Upcoming Events</h2>
