edit meta titles - chamber

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce Site</title>
+    <title>Chamber of Commerce Site: Directory Page</title>
     <meta name="description" content="Billings Chamber of Commerce Website: Directory Page">
     <meta name="author" content="Haley Atkinson">
     <link rel="stylesheet" href="styles/normalize.css">
