final edits to chamber site for submission.

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -66,8 +66,8 @@
                 camping, and in slow sections, swimming.</p>
         </section>
         <section class="card2 sidebar">
-            <h2>Sidebar 3</h2>
-            <p>sidebar content</p>
+            <h2>Nickname</h2>
+            <p>Billings is known as the "Magic City".</p>
         </section>
         <section class="card2 image">
             <h2>Pictograph Cave State Park</h2>
@@ -80,8 +80,8 @@
                 that date back thousands of years.</p>
         </section>
         <section class="card2 sidebar">
-            <h2>Sidebar 4</h2>
-            <p>sidebar content</p>
+            <h2>Montana State Bird</h2>
+            <p>The Western Meadowlark is the state bird of Montana.</p>
         </section>
         <section class="card2 image">
             <h2>Lake Elmo State Park</h2>
@@ -94,8 +94,8 @@
                 You might even see some ice fishing in the winter!</p>
         </section>
         <section class="card2 sidebar">
-            <h2>Sidebar 5</h2>
-            <p>sidebar content</p>
+            <h2>Montana State Flower</h2>
+            <p>The Meadowlark flower is the state flower of Montana.</p>
         </section>
         <section class="card2 image">
             <h2>Shiloh Conservation Area</h2>
@@ -108,8 +108,8 @@
                 gazebo, and plentiful wildlife.</p>
         </section>
         <section class="card2 sidebar">
-            <h2>Sidebar 6</h2>
-            <p>sidebar content</p>
+            <h2>Montana State Tree</h2>
+            <p>The Ponderosa Pine tree is the state tree of Montana.</p>
         </section>
         <section class="card2 image">
             <h2>Phipps Park</h2>
