--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,9 +36,7 @@
     <main>
         <div class="hero">
             <picture>
-                <!--<source srcset="" media="(min-width: 400px)">
-                <source srcset="" media="(min-width: 960px)">-->
-                <img src="images/billings.webp" alt="Hero Image - Billings Rimrocks" width="1200" height="952">
+                <img src="images/billings-wide.webp" alt="Hero Image - Billings Rimrocks" width="474" height="135">
             </picture>
             <div class="herolabel">
                 <span><a href="join.html" class="cta">Click here to join the chamber of commerce!</a></span>
@@ -51,9 +49,22 @@
         <section class="card">
             <h2>Upcoming Events</h2>
             <ul>
-                <li><a href="#">52nd Annual Symphony in the Park</a></li>
-                <li><a href="#">Yellowstone Valley Farmer's Market</a></li>
-                <li><a href="#">Alberta Bair Theater: Swan Lake</a></li>
+                <li>
+                    <a href="https://billingssymphony.org/shows/free-family-series/symphony-in-the-park-2024/">52nd Annual Symphony in the Park</a>
+                    <p>Join us June 23 for a warm evening filled with familiar symphony music.</p>
+                </li>
+                <li>
+                    <a href="https://www.yvfm.org/">Yellowstone Valley Farmer's Market</a>
+                    <p>The Yellowstone Valley Farmer's Market will run from July 20-Oct 5.</p>
+                </li>
+                <li>
+                    <a href="https://www.bigskyballoonrally.com/">Big Sky Balloon Festival</a>
+                    <p>Balloon festival events: Thursday, Friday, and Saturday July 25-27.</p>
+                </li>
+                <li>
+                    <a href="https://www.albertabairtheater.org/shows/world-ballet-company-swan-lake/">Alberta Bair Theater: Swan Lake</a>
+                    <p>See the World Ballet Company perform our hit show of the year on Oct 19!</p>
+                </li>
             </ul>
         </section>
         <section class="card">
@@ -62,7 +73,7 @@
                 <h3>Weather:</h3>
                 <span class="current-temp"></span>
                 <figure>
-                    <img id="weather-icon" src="" alt="">
+                    <img id="weather-icon" src="images/placeholder.png" alt="weather icon placeholder">
                     <figcaption></figcaption>
                 </figure>
             </div>
